# synphage

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  conftest.py  index.html  mkdocs.yml  out  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml  github-pages.yml
Docker/: Dockerfile  requirements.txt
coming_soon/: index.html
configurations/: index.html
docs/: configurations.md  index.md  installation.md  jobs.md  output.md  phages.md  pipeline.md  short_guide.md
docs/snippets/: blastn_df.md  example3.md  gene_uniqueness.md  partially_conserved_gene_example.md  protein_uniqueness.md  unique_gene_example.md  unique_protein_example.md
docs/stylesheets/: extra.css
installation/: index.html
jobs/: index.html
notebooks/: refactor.ipynb
output/: index.html
phages/: index.html
pipeline/: index.html
plasmids/: index.html
scripts/: check_line_count.py
search/: search_index.json
short_guide/: index.html
snippets/: KP793103_1.fna  KP793103_1_vs_KP793107_1  sequences.csv
snippets/blastn_df/: index.html
snippets/example3/: index.html
snippets/gene_uniqueness/: index.html
snippets/partially_conserved_gene_example/: index.html
snippets/protein_uniqueness/: index.html
snippets/unique_gene_example/: index.html
snippets/unique_protein_example/: index.html
source/: Blaster.py  Easyfig.py  PhageView.py  __init__.py  build_diagram.py  jobs.py
source/assets/: __init__.py
source/assets/blaster/: blaster.py
source/assets/genbank_file_status/: status.py
source/assets/ncbi_connect/: accession.py
source/assets/status/: __init__.py  status.py
source/assets/tables/: dynamic.py  tables.py
source/assets/viewer/: viewer.py
source/resources/: __init__.py  ncbi_resource.py  parquet_io_manager.py
source/sensors/: __init__.py  genbank_update_sensor.py  graph_file_sensor.py
source/sql/: gene_presence.sql  parse_blastn.sql
stylesheets/: extra.css
synphage/: __init__.py  jobs.py  synphage_settings.py
synphage/assets/: __init__.py
synphage/assets/blaster/: blaster.py  n_blaster.py  n_blaster_old  n_parser.py  p_blaster.py  p_parser.py
synphage/assets/foldseek/: foldseek_cluster.py  foldseek_fasta.py  foldseek_modal.py  transform_foldseek.py
synphage/assets/ncbi_connect/: accession.py  downloaded_file_transfer.py  sequence_quality_assessment.py
synphage/assets/phold/: phold_annotate.py  phold_fasta.py  phold_modal.py  transform_phold.py
synphage/assets/status/: __init__.py  content_loading.py  content_validation.py  external_code.py  gb_file_status.py  status.py  validated_content.py
synphage/assets/structure_module/: foldseek_cluster.py  foldseek_modal.py  interpro_scan.py  transform_foldseek.py  transform_interproscan.py
synphage/assets/user_data/: users_file_transfer.py
synphage/assets/viewer/: static_graph.py  viewer.py
synphage/prototype/: synphage_settings.py
synphage/resources/: __init__.py  local_resource.py  ncbi_resource.py  parquet_io_manager.py
synphage/sql/: gene_presence.sql  parse_blastn.sql
synphage/utils/: check_factory.py  convert_gb_to_df.py  reload_ui.py
test/debug/: test_chart.py
test/fixtures/dataframes_job/: blastn_summary.parquet  locus_and_gene.parquet
test/fixtures/unextected_features/: FR823450_1.gb
test/unit/: test_no_data_dir_set.py
test/unit/accession_asset/: test_accession_count.py  test_accession_ids.py  test_download_genomes.py  test_download_to_genbank.py  test_fetch_genome.py  test_ncbi_count.py  test_queryconfig_class.py  test_sequence_check.py  test_setup_query_config.py
test/unit/all_jobs/: test_blasting_job.py  test_dataframes_job.py  test_df_job.py  test_ncbi_download_job.py  test_synteny_job.py
test/unit/all_resources/: test_local_resources.py  (+1 more)
tests/unit/: test_blaster.py
utils/: make_genbank.py
(+312 files in other folders)
