[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synphage"
version = "0.2.7"
authors = [
  { name="Virginie Grosboillot", email="vestalisvirginis@gmail.com" },
]
license = {file = "LICENSE"}
description = "Python library for plotting synteny diagram for phage and bacterial sequences."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster == 1.7.15",
    "dagster-webserver == 1.7.15",
    "biopython == 1.84",
    "reportlab == 4.2.2",
    "rlPyCairo == 0.3.0",
    "cuallee == 0.13.1",
    "pandas == 2.2.2",
    "duckdb == 1.0.0",
    "polars == 1.3.0",
    "pyarrow == 17.0.0",
    "requests == 2.32.3",
    "pycairo == 1.26.1",
    "svgutils == 0.3.4",
    "cairosvg == 2.7.1",
]

[project.optional-dependencies]
dev = [
  "black==24.4.2",
  "mypy",
  "flake8",
]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
]
all = [
  "synphage[dev,test]"
]


[project.urls]
"Homepage" = "https://github.com/vestalisvirginis/synphage"
"Bug Tracker" = "https://github.com/vestalisvirginis/synphage"