[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synphage"
version = "0.2.8"
authors = [
  { name="Virginie Grosboillot", email="vestalisvirginis@gmail.com" },
]
license = {file = "LICENSE"}
description = "Python library for plotting synteny diagram for phage and bacterial sequences."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster == 1.13.0",
    "dagster-webserver == 1.13.0",
    "biopython == 1.87",
    "reportlab == 4.4.10",
    "rlPyCairo == 0.4.0",
    "cuallee == 0.15.4",
    "pandas == 3.0.2",
    "duckdb == 1.5.1",
    "polars == 1.40.0",
    "pyarrow == 23.0.1",
    "requests == 2.33.0",
    "pycairo == 1.27.0",
    "svgutils == 0.3.4",
    "cairosvg == 2.9.0",
]

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "mypy",
  "flake8",
  "pre-commit>=4.5.1",
  "radon>=6.0.1",
  "ruff>=0.15.8",
]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
]
all = [
  "synphage[dev,test]"
]


[project.urls]
"Homepage" = "https://github.com/vestalisvirginis/synphage"
"Bug Tracker" = "https://github.com/vestalisvirginis/synphage"

[tool.ruff.lint]
ignore = ["E731"]
